# VulkanTemplate

./: CMakeLists.txt  LICENSE.md  README.md
base/: ApplicationContext.cpp  ApplicationContext.h  CMakeLists.txt  UIOverlay.cpp  UIOverlay.h  VulkanApplication.cpp  VulkanApplication.h  VulkanContext.cpp  VulkanContext.h  VulkanTools.cpp  VulkanTools.h  VulkanglTFModel.cpp  VulkanglTFModel.h
base/compilers/: dxc.cpp  dxc.hpp
base/interfaces/: DeviceResource.cpp  DeviceResource.h  IDeviceResource.hpp
base/loaders/: glTF.cpp  glTF.h
base/utilities/: ActorManager.cpp  ActorManager.h  AssetManager.cpp  AssetManager.h  AudioManager.cpp  AudioManager.h  Camera.hpp  FileWatcher.hpp  Frustum.hpp  Initializers.hpp
base/wrappers/: Buffer.hpp  CommandBuffer.hpp  CommandPool.hpp  DescriptorPool.hpp  DescriptorSet.hpp  DescriptorSetLayout.hpp  Device.hpp  Image.hpp  ImageView.hpp  Pipeline.hpp  PipelineLayout.hpp  Sampler.hpp  ShaderStage.hpp  SwapChain.hpp  Texture.hpp
data/shaders/: CMakeLists.txt  filtercube.vert.hlsl  filtercube_irradiance.frag.hlsl  filtercube_radiance.frag.hlsl  fullscreen.frag  fullscreen.frag.hlsl  fullscreen.vert.hlsl  gltf.frag  gltf.frag.hlsl  gltf.vert  gltf.vert.hlsl  playership.vert.hlsl  skybox.frag.hlsl  skybox.vert.hlsl
src/: CMakeLists.txt  VulkanContext.cpp  VulkanContext.h  main.cpp
